# SAMU-Hub-Modeles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  LICENSE_HEADER.txt  README.md  README_ADDING_SCHEMAS_TO_MODEL.md  build.gradle  cisu.json  generator.ts  hubsante.asyncapi.yaml  lefthook.yml  model.xlsx  non_redundant_descriptor.yaml  package-lock.json  package.json  pipeline.sh  settings.gradle
converter/: .dockerignore  .gitignore  Conversion.ipynb  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
converter/converter/: cisu_converter.py  constants.py  conversion_mixin.py  converter.py  database.py  logging_config.py  repository.py  tracing.py  utils.py  v1_v2_converter.py
converter/converter/cisu/: base_cisu_converter.py  cisu_converter.py  constants.py  identical_cisu_converter.py  location_kind_deprecated_nomenclature.csv  location_kind_updated_nomenclature.csv  mrms_cisu_updated_nomenclature.csv  utils.py
converter/converter/cisu_transcoders/: constants.py  identical_cisu_converter.py
converter/converter/cisu_version_converters/: base_cisu_version_converter.py  identical_cisu_version_converter.py
converter/converter/conversion_strategy/: cisu_conversion_strategy.py  cisu_transcoding_strategy.py  cisu_version_conversion_strategy.py  conversion_strategy.py  health_conversion_strategy.py  health_version_conversion_strategy.py
converter/converter/health_version_converters/: error_converter.py  identical_message_converter.py  utils.py
converter/converter/models/: persisted_message.py
converter/converter/repositories/: message_repository.py
converter/converter/v1_v2/: base_message_converter.py  create_case_health_converter.py  reference_converter.py  utils.py  v1_v2_converter.py
converter/converter/v2_v3/: create_case_health_converter.py  v2_v3_converter.py
converter/scripts/: call_convert.sh
converter/tests/: conftest.py  constants.py  edxl_envelope_fire_to_health.json  edxl_envelope_health_to_fire.json  edxl_envelope_health_to_health.json  test_cisu_converter.py  test_cisu_utils.py  test_conversion_strategy.py  test_converter.py  test_geo_positions_update_converter.py  test_health_conversion_strategy.py  test_helpers.py  test_identical_converter.py  test_reference_converter.py  test_repository.py  test_resources_engagement_converter.py  test_resources_info_converter.py  test_resources_request_converter.py  test_resources_response_converter.py  test_resources_status_converter.py  test_rs_eda_maj_converter.py  test_utils.py  test_v1_v2_converter.py  test_v1_v2_utils.py  test_v2_v3_converter.py
csv_parser/: .gitignore  Dockerfile  Makefile  RC-DE.openapi.yaml  README.md  auto.sh  csv_parser.py  example.json  hubsante.asyncapi.yaml  model.csv  model.xlsx  models.xlsx  pyproject.toml  requirements.txt  schema.docx  schema.json  template.asyncapi.yaml  template.openapi.yaml  test-cases-15-15.xlsx  test_case_generator.py  uml_generator.py  workflow.py
csv_parser/json_schema2xsd/: README.md  build.gradle  settings.gradle
csv_parser/model/: model.xlsx
csv_parser/models/: model-technical.xlsx  model.xlsx  model.xslx
csv_parser/nomenclature/: EMSI-CONTEXT.LEVEL.csv  EMSI-CONTEXT.MSGTYPE.csv  EMSI-CONTEXT.SECLASS.csv  EMSI-EVENT.EGEO.TYPE.csv  EMSI-EVENT.EGEO.WEATHER.csv  EMSI-EVENT.ETYPE.ACTOR.csv  EMSI-EVENT.ETYPE.CATEGORY.csv  EMSI-EVENT.ETYPE.ENV.csv  EMSI-EVENT.SCALE.csv  EMSI-MISSION.TYPE.csv  EMSI-RESOURCE.RTYPE.CAPABILITY.csv  EMSI-RESOURCE.RTYPE.CLASS.csv  EMSI-RESOURCE.UM.csv  EMSI-RGEO.POSITION.TYPE.csv
csv_parser/test-case-sources/: test-cases-15-15.xlsx  test-cases-15-SMUR.xlsx
generator_python/package/: pyproject.toml
(+3342 files in other folders)
