[project]
name = "converter"
version = "0.1.0"
description = "Converter service for SAMU-Hub-Modeles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "jsonpath-ng>=1.7.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.9",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.15.0",
    "werkzeug>=3.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=converter --cov-report=term-missing"

[tool.coverage.run]
source = ["converter"]
omit = [
    "tests/*",
    "setup.py",
    "**/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.3",
    "types-jsonschema>=4.25.1.20250822",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "snapshottest>=0.6.0",
]

[[tool.mypy.overrides]]
module = ["snapshottest.*", "jsonpath_ng.*"]
ignore_missing_imports = true
